--- a/movie.ipynb
+++ b/movie.ipynb
@@ -1321,6 +1321,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Packages / libraries\n",
+    "import os #provides functions for interacting with the operating system\n",
+    "import numpy as np \n",
+    "import pandas as pd\n",
+    "from matplotlib import pyplot as plt\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
