--- a/final_movie.ipynb
+++ b/final_movie.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Importing all related Liabriries and packages!!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,9 +61,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data exploring and understanding\n",
+    "all data from zippedData folder \n",
+    "imdb.title.basics\n",
+    "imdb.title.ratings\n",
+    "bom.movie_gross\n",
+    "tn.movie_budgets.csv.gz"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1097,6 +1118,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    # there are pleanty of NaN value. missing value in the above dataset and i did not used mean value as it will not reflect true amount! left it alone ! potential remedy could be when we build a model and we have more new or current data this data field will show more accurate outcome!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
@@ -1783,6 +1811,13 @@
    ],
    "source": [
     "title_ba_ra[(title_ba_ra.averagerating > 7.0) & (title_ba_ra.genres == 'Action')]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The reason i have only separated genres column in g1,g2 and g3 as movie genres decides based on its typical genres type which means 1st 3 category will cover most of the important genres!"
    ]
   },
   {
@@ -2872,13 +2907,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#### not sure why it is coming loke that??   \n",
-    "title_new = title_ba_ra.foreign_gross.str.replace(',','').astype(float)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -3598,11 +3630,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    " # Above plot shows movie rating inbetween 6 to 8 gets most numbers of vote! Also when a movie gets more than 500k vote that rating gets good ratings!"
+   ]
   },
   {
    "cell_type": "code",
@@ -3761,11 +3793,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Above Barchart tells us that out of all those mix genres group these are the 3 types of mix genres are common in most of movies! e.g= a mix of adventure,animation and comedy and action,adventure and scifi is popular mix! "
+   ]
   },
   {
    "cell_type": "code",
@@ -4763,6 +4795,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Above barchart tells us about which are the genres types are most made movies after 2014! e.g= action, drama,animation comedy and adventure!"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 273,
    "metadata": {},
    "outputs": [
@@ -5098,6 +5144,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Above barchart tells us about which are the genres types are most made movies before 2014! if we dig little bit in those two barchart which tells us that before 2014 the movie genres treand was drama, adventure,comedy."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 290,
    "metadata": {},
@@ -5116,7 +5169,7 @@
     }
    ],
    "source": [
-    "### next i want check which genres of movie gets better ratings!!\n",
+    "### next i want check which genres of movie gets better ratings above 7 with movie genres!!\n",
     "plt.figure(figsize=(10,8))\n",
     "plt.plot(df10.g1, df10.averagerating, 'o')\n",
     "plt.title(\"Movie Genres relation with Ragings\")\n",
@@ -5127,6 +5180,13 @@
     "plt.xticks(rotation = 45)\n",
     "plt.savefig('movie genres_rating', dpi=300)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# From above plot we can guess that not all the genres have very high movie rating!"
    ]
   },
   {
@@ -5178,6 +5238,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# above pie chart shows almost 70% ratings are belong to rating 6 to 7 where only 4.36% above 8!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 393,
    "metadata": {},
@@ -5210,11 +5277,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# above boxplot tells how above type of genres in movies standing based on their ratings!"
+   ]
   },
   {
    "cell_type": "code",
