--- a/final_movie.ipynb
+++ b/final_movie.ipynb
@@ -64,6 +64,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Business Understanding:\n",
+    "Before i start this project i wanted understand the business problem and and the movie business world! I wanted to find out what are the key factor contributess to good movie or good movie rating. different genres, actors/actresses, budgets, production house name, directors, and different platform where is this movie landing!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Data exploring and understanding\n",
     "all data from zippedData folder \n",
     "imdb.title.basics\n",
